# skypro-python-lesson-27

./: conftest.py  db.sqlite3  docker-compose.yaml  pyproject.toml  pytest.ini
ads/: admin.py  drf_validators.py  factories.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_category_slug_alter_advertisement_name_and_more.py
lesson27/: settings.py  urls.py
postgres_data/: postmaster.pid
postgres_data/base/13455/: 1259  2619  2696  pg_internal.init
postgres_data/base/16384/: 1247  1249  1259  1259_fsm  1259_vm  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2619_vm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2699  2701  2702  2703  2704  2840  2841  32800  32802  32808  (+75 more)
postgres_data/global/: 1262  1262_vm  2671  2672  pg_control  pg_internal.init
postgres_data/pg_stat_tmp/: db_0.stat  db_13455.stat  db_16384.stat  global.stat
postgres_data/pg_subtrans/: 0000
postgres_data/pg_xact/: 0000
selections/: models.py  permissions.py  serializers.py  urls.py  views.py
selections/migrations/: 0001_initial.py
tests/: create_ads_test.py  create_selection_test.py  get_ads_test.py  get_certain_ad_test.py
users/: drf_validators.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_age.py  0003_user_role.py  0004_alter_user_locations.py  0005_user_birth_date_alter_user_email.py
